--- a/pal.conf
+++ b/pal.conf
@@ -1,4 +1,4 @@
-file p/activities.pal (cyan)
-file p/to-do.pal (yellow)
-file p/sleeping.pal (blue)
-file p/travel.pal (black)
+file activities.pal (cyan)
+file to-do.pal (yellow)
+file sleeping.pal (blue)
+file travel.pal (black)
