--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ Django>=1.7.7
 Markdown>=2.6.1
 PyYAML>=3.11
 Unidecode>=0.4.16
-lxml>=3.4.2
-pexpect>=3.3
-psycopg2>=2.5.4
+#lxml>=3.4.2
+#psycopg2>=2.5.4
