--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ Django>=1.7.7
 Markdown>=2.6.1
 PyYAML>=3.11
 Unidecode>=0.4.16
-#lxml>=3.4.2
-#psycopg2>=2.5.4
+
+# These are better to install from your operating system's package manager
+# (pacman, apt-get, yum, &c.)
+# lxml>=3.4.2
+# psycopg2>=2.5.4
