--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django>=1.7.7
 Markdown>=2.6.1
 PyYAML>=3.11
 Unidecode>=0.4.16
+docutils>=0.12
 
 # These are better to install from your operating system's package manager
 # (pacman, apt-get, yum, &c.)
