--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Markdown>=2.6.1
 PyYAML>=3.11
 Unidecode>=0.4.16
 docutils>=0.12
+pytest>=2.8.0
 
 # These are better to install from your operating system's package manager
 # (pacman, apt-get, yum, &c.)
