--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ PyYAML>=3.11
 Unidecode>=0.4.16
 docutils>=0.12
 pytest>=2.8.0
+django-haystack>=2.3.1
 
 # These are better to install from your operating system's package manager
 # (pacman, apt-get, yum, &c.)
