--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Django>=1.7.7
+Django>=1.8
 Markdown>=2.6.1
 PyYAML>=3.11
 Unidecode>=0.4.16
 docutils>=0.12
 pytest>=2.8.0
 django-haystack>=2.3.1
+django-grappelli>=2.6.4
 
 # These are better to install from your operating system's package manager
 # (pacman, apt-get, yum, &c.)
