--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Unidecode>=0.4.16
 docutils>=0.12
 pytest>=2.7.2
 django-haystack>=2.3.1
+whoosh>=2.7.0
 
 # These are better to install from your operating system's package manager
 # (pacman, apt-get, yum, &c.)
